# cirrus-one

./: .gitignore  README.md  pyproject.toml
deid/alignment/: aligner.py  cadence.py  integrity.py  stage_alignment.py
deid/api/: app.py  artifact_gateway.py  file_download.py  job_registry.py  pipeline_adapter.py  routes_jobs.py  routes_runs.py  routes_sessions.py  run_registry.py  schemas_api.py
deid/cli/: commands_analyze.py  commands_export.py  commands_report.py  main.py
deid/config/: defaults.yaml  hashing.py  models.py
deid/core/: coords.py  errors.py  ids.py  logging.py  time.py  types.py  units.py  versioning.py
deid/events/: catalog.py  features.py  qc.py  stage_event_extract.py
deid/events/extractors/: base.py  threshold_morph.py
deid/events/masks/: rle.py  store.py
deid/fusion/: matcher.py  stage_fusion.py  tables.py  validation.py
deid/inference/: findings.py  gating.py  latent.py  phenotype_vector.py  regimes.py  stage_inference.py
deid/ingest/: manifest.py  particle_reader.py  processed_reader.py  stage_ingest.py  thermal_reader_hdf5.py
deid/plate_state/: changepoints.py  estimator.py  health.py  quiescent.py  stage_plate_state.py
deid/reporting/: bundle.py  exporters.py  figures.py
deid/runner/: __init__.py  dag.py  execute.py  job.py  storage.py
deid/storage/: hashing.py  io.py  paths.py
deid/swe/: closure.py  rate.py  reconstruct.py  stage_swe_closure.py
deid/swe/calibrators/: base.py  energy_linear.py
scripts/: audit_run.py  debug_alignment.py  diagnose_run.py  estimate_energy_scale.py  estimate_time_offset.py
tests/fixtures/: synthetic_generator.py
tests/fixtures/golden_runs/: generate_golden.py  golden_specs.py  metrics.py  test_golden_pipeline.py
tests/test_contracts/: test_stage_artifacts.py
