[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# -------------------------------------------------------------------
# Project metadata
# -------------------------------------------------------------------

[project]
name = "cirrus-one"
version = "0.1.0"
description = "DEID Meteorological Analysis Pipeline"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "DEID Research Project" }
]

license = { text = "Proprietary" }

keywords = [
    "meteorology",
    "disdrometer",
    "precipitation",
    "thermal imaging",
    "research pipeline",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# -------------------------------------------------------------------
# Core runtime dependencies (Tier 1 compatible)
# -------------------------------------------------------------------

dependencies = [
    # Core data stack
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",

    # HDF5
    "h5py>=3.10",

    # Config + validation
    "pydantic>=2.4",

    # CLI
    "typer>=0.9",
    "PyYAML>=6.0",
]

# -------------------------------------------------------------------
# Optional dependency groups
# -------------------------------------------------------------------

[project.optional-dependencies]

# Development tooling
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.7",
]

# Future scientific stack (Tier 2/3)
science = [
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
]

# Cloud/object-store support (future)
cloud = [
    "s3fs",
    "zarr>=2.16",
]

# -------------------------------------------------------------------
# CLI entrypoint
# -------------------------------------------------------------------

[project.scripts]
deid = "deid.cli.main:main"

# -------------------------------------------------------------------
# setuptools configuration
# -------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["deid*"]

# -------------------------------------------------------------------
# Ruff (fast linting)
# -------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

# -------------------------------------------------------------------
# Black formatter
# -------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py310"]

# -------------------------------------------------------------------
# Mypy (optional but strongly recommended)
# -------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true